deployments/poi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: poi
  name: poi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: poi
    spec:
      containers:
      - image: registryrvy7760.azurecr.io/tripinsights/poi:1.0
        name: poi
        ports:
        - containerPort: 80
        resources: {}
status: {}
