deployments/tripviewer-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: tripviewer
  name: tripviewer
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: tripviewer
    spec:
      containers:
      - image: registryrvy7760.azurecr.io/tripinsights/tripviewer:1.0
        name: tripviewer
        resources: {}
status: {}
