deployments/user-java-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: user-java
  name: user-java
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-java
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: user-java
    spec:
      containers:
      - image: registryrvy7760.azurecr.io/tripinsights/user-java:1.0
        name: user-java
        resources: {}
status: {}
