deployments/userprofile-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: userprofile
  name: userprofile
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: userprofile
    spec:
      containers:
      - image: registryrvy7760.azurecr.io/tripinsights/userprofile:1.0
        name: userprofile
        resources: {}
status: {}
