deployments/tripviewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: tripviewer
  name: tripviewer-service
  namespace: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tripviewer
status:
  loadBalancer: {}
