deployments/user-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: user-java
  name: user-java-service
  namespace: api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: user-java
status:
  loadBalancer: {}
