deployments/userprofile-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: userprofile
  name: userprofile-service
  namespace: api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: userprofile
status:
  loadBalancer: {}
